--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,18 @@
 version: 2.1
+orbs:
+  ruby: circleci/ruby@0.1.2 
+
 jobs:
-   build:
-      docker:
-         - image: circleci/ruby:2.6.3-stretch-node
+  build:
+    docker:
+      - image: circleci/ruby:2.6.3-stretch-node
+    executor: ruby/default
+    steps:
+      - checkout
+      - run:
+          name: Greeting
+          command: echo Hello, world.
       
-      steps:
-         - checkout    
-         - run:
-            name: Greeting
-            command: echo Hello, world.
-            
-         - run:
-            name: Print the current time
-            command: date
+      - run:
+          name: Print the current time.
+          command: date
