--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,14 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
-      - run:
-          name: Greeting
-          command: echo Hello, world.
+      
+	  - run:
+	      name: Build Dependencies
+		  command: bundle install
+		  
+	  - run:
+          name: Build Jekyll Site
+          command: build exec jekyll build
       
       - run:
           name: Print the current time.
