--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ description: >
   <br><br>
   <a href="https://www.pluralsight.com">www.wiredbraincoffee.com</a>
 
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-tactile
